fix db initialization and add crud functionality

--- a/ComposerInfo_WebApp/Views/Shared/_Layout.cshtml
+++ b/ComposerInfo_WebApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Composers", "Index", "Composers")</li>
+                    <li>@Html.ActionLink("Composer", "Index", "Composer")</li>
                     <li>@Html.ActionLink("Operas", "Index", "Operas")</li>
                 </ul>
             </div>
